# gnome-data-stats

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: implementation_summary.md  specs_and_plan.md
scripts/: release.js  sync-version.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_stats.rs  lib.rs  main.rs
